[package]
name = "shortcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
mslnk = "0.1.8"
clap = { version = "4.1.1", features = ["derive"] }
